[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Traps/Fire/on.png" type="Texture" id=1]
[ext_resource path="res://assets/Traps/Fire/hit.png" type="Texture" id=2]
[ext_resource path="res://assets/Traps/Fire/off.png" type="Texture" id=3]
[ext_resource path="res://src/Traps/Fire/Fire.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "on",
"speed": 20.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "off",
"speed": 20.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "hit",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8, 1 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 6, 8 )

[node name="Fire" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "off"
playing = true

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 11 )

[node name="SearArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearArea"]
position = Vector2( 0, -8 )
shape = SubResource( 12 )
disabled = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_entered" from="SearArea" to="." method="_on_SearArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
